samples/_failures_safe/1761218150_6ccfdd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5bc283ee.c: In function ‘main’:
./samples/SAFE/__tmp_5bc283ee.c:191:47: error: ‘MAX_TOK’ undeclared (first use in this function); did you mean ‘MAX_TOKENS’?
  191 |     int token_count = tokenize(input, tokens, MAX_TOK
      |                                               ^~~~~~~
      |                                               MAX_TOKENS
./samples/SAFE/__tmp_5bc283ee.c:191:47: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_5bc283ee.c:191:54: error: expected ‘)’ at end of input
  191 |     int token_count = tokenize(input, tokens, MAX_TOK
      |                               ~                      ^
      |                                                      )
./samples/SAFE/__tmp_5bc283ee.c:191:5: error: expected declaration or statement at end of input
  191 |     int token_count = tokenize(input, tokens, MAX_TOK
      |     ^~~
